<resources>
    <string name="app_name">智能轮椅</string>
    <string name="start">开始</string>
    <string name="over">停止</string>
    <string name="action_setting">扫描蓝牙</string>
    <string name="action_connect">直连设备</string>
    <string name="action_quit">Fragment</string>
    <string name="scan">扫描蓝牙</string>
    <string name="connect">一键连接</string>
    <string name="action_gravity">远程控制</string>
    <string name="value">俯仰值:%1$d</string>
    <string name="value1">俯仰值:%1$d</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_menu_alert">跟随</string>
    <string name="tab_menu_profile">坐姿</string>
    <string name="tab_menu_pay">远程控制</string>
    <string name="tab_menu_setting">设置</string>
    <string name="start_up">启动</string>
    <string name="follower">开始跟随</string>
    <string name="stop_follower">停止跟随</string>
    <string name="stop">停止</string>
    <string name="seating">无人</string>
    <string name="state">state</string>
    <string name="connecting">正在连接</string>
    <string name="start_up_gravity">启动重力控制</string>
    <string name="start_up_btn">启动按钮控制</string>
    <string name="stop_btn">停止按钮控制</string>
    <string name="stop_gravity">停止重力控制</string>
    <string name="rocker">摇杆控制</string>


</resources>
